--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,7 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm install
+      - name: Run tests
+        run: npm test
       - name: Build
         run: npm run build
