--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=carlosamr2_sonar-training-examples
 sonar.organization=carlosamr2
-
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonar-training-examples
