--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=carlosamr2_sonar-training-examples
 sonar.organization=carlosamr2
+sonar.sources=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions=dist/**,coverage/**
+sonar.tests=test
+sonar.test.inclusions=test/**/*.test.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonar-training-examples
