--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=carlosamr2
 sonar.sources=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.exclusions=dist/**,coverage/**
-sonar.tests=test
+sonar.tests=tests
 sonar.test.inclusions=test/**/*.test.ts
 
 # This is the name and version displayed in the SonarCloud UI.
